--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,18 @@
     "name": "EcoZon",
     "version": "1.0",
     "description": "rates amazon products based off their environmental friendliness",
+    
+    "background": {
+      "scripts": ["background.js"],
+      "persistent": false
+    },
+    "content_scripts": [
+      {
+        "matches": ["http://www.amazon.com/*"],
+        "css": ["mystyles.css"],
+        "js": [ "myscript.js"]
+      }
+    ],
+    
     "manifest_version": 2
   }
