--- a/manifest.json
+++ b/manifest.json
@@ -25,9 +25,17 @@
       "128": "images/get_started128.png"
     },
     "options_page": "options.html",
-    
-    
 
-    "manifest_version": 2
+    "manifest_version": 2,
+    
+    "web_accessible_resources": [
+      "/images/*.png"
+    ],
+
+    "content_scripts": [{
+    
+      "js": ["content.js"],
+      "matches": ["https://www.amazon.com/*"]
+    }]
   }
 
