Changed images and added popup

--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,28 @@
   {
     "name": "EcoZon",
     "version": "1.0.0",
-    "description": "rates amazon products based off their environmental friendliness",
+    "description": "a chrome extension that rates amazon products based off their environmental friendliness",
     "permissions": ["activeTab","declarativeContent","storage"],
     "background": {
       "scripts": ["background.js"],
       "persistent": false
     },
-    "page_action": {
+    "browser_action": {
       "default_popup": "popup.html",
       
       "default_icon": {
-        "16": "images/get_started16.png",
-        "32": "images/get_started32.png",
-        "48": "images/get_started48.png",
-        "128": "images/get_started128.png"
+        "16": "images/Artboard-1x16.png",
+        "32": "images/Artboard-1x32.png",
+        "48": "images/Artboard-1x48.png",
+        "128": "images/Artboard-1x128.png"
       }
 
     },
     "icons": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
+      "16": "images/Artboard-1x16.png",
+        "32": "images/Artboard-1x32.png",
+        "48": "images/Artboard-1x48.png",
+        "128": "images/Artboard-1x128.png"
     },
     "options_page": "options.html",
 
